--- a/app/src/Component/Header/Header.scss
+++ b/app/src/Component/Header/Header.scss
@@ -1,16 +1,19 @@
 .header {
   background-color: #20232a; 
   color: white;
-  padding: 20px;
+  padding: 20px 0;
   display: flex;
   justify-content: space-between; 
   align-items: center;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2); 
+  width: 100%;
 
   a {
     color: white;
     text-decoration: none; 
     padding: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
     &:hover {
       color: #61dafb; 
     }
