--- a/app/src/Component/Grid/Grid.scss
+++ b/app/src/Component/Grid/Grid.scss
@@ -32,6 +32,7 @@
   align-items: center;
   margin: 20px;
   background-color: #2b2f39;
+  width: 90%;
 
   .arrowLeft, .arrowRight {
     cursor: pointer;
